--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -12,7 +12,21 @@ input:-webkit-autofill:focus {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Ubuntu', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #752d871a;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #1a475dc9;
+  border-radius: 10px;
 }
